src/objects/ExtendedWarrantyProduct__c.object
<CustomObject>
    <fields>
        <fullName>ConfigurationList__c</fullName>
        <label>配置单</label>
        <referenceTo>ConfigurationList__c</referenceTo>
        <relationshipLabel>延保配件</relationshipLabel>
        <relationshipName>ConfigurationListEW</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExtendMonth__c</fullName>
        <label>数量(月)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExtendWarrantyCode__c</fullName>
        <formula>ConfigurationList__r.ContractReview__r.ContractNumber</formula>
        <label>延保订单号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtendWarrantyPrice__c</fullName>
        <label>延保价格</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SystemStandardPricePer__c</fullName>
        <label>系统基准价单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemStandardPriceTotal__c</fullName>
        <label>系统基准价总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>成交总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>成交单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品名称</label>
        <referenceTo>Product3__c</referenceTo>
        <relationshipLabel>延保配件</relationshipLabel>
        <relationshipName>product1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ybjzj__c</fullName>
        <label>延保基准价</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12500</fullName>
                </value>
                <value>
                    <fullName>16500</fullName>
                </value>
                <value>
                    <fullName>20000</fullName>
                </value>
                <value>
                    <fullName>2500</fullName>
                </value>
                <value>
                    <fullName>4100</fullName>
                </value>
                <value>
                    <fullName>1500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>延保配件</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>延保配件名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>延保配件</pluralLabel>
    <recordTypes>
        <fullName>ConfigurationList</fullName>
        <active>true</active>
        <label>配置单</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stock</fullName>
        <active>true</active>
        <label>库存</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>